--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.23.0
+  google_maps_flutter: ^2.2.1
+  firebase_auth: ^3.11.2
 
 dev_dependencies:
   flutter_test:
