--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,14 @@ dependencies:
   firebase_auth: ^4.1.0
   firebase_database: 10.0.3
   cloud_firestore: ^4.0.3
+  file_picker: ^5.2.2
+  flutter_chat_types: ^3.6.0
+  flutter_chat_ui: ^1.6.6
+  image_picker: ^0.8.6
+  mime: ^1.0.2
+  open_filex: ^4.2.2
+  path_provider: ^2.0.11
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
