--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   open_filex: ^4.2.2
   path_provider: ^2.0.11
   uuid: ^3.0.6
+  geolocator: ^9.0.2
+  http: ^0.13.5
+  json_serializable: ^6.5.4
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +63,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -77,6 +81,7 @@ flutter:
      - assets/login.png
      - assets/register.png
      - assets/parque2.png
+     - assets/locations.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
