--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.1.1
+  firebase_core: ^2.3.0
   google_maps_flutter: ^2.2.1
   firebase_auth: ^4.1.0
   firebase_database: 10.0.3
-  cloud_firestore: ^4.0.3
+  cloud_firestore:
   file_picker: ^5.2.2
   flutter_chat_types: ^3.6.0
   flutter_chat_ui: ^1.6.6
@@ -82,6 +82,7 @@ flutter:
      - assets/register.png
      - assets/parque2.png
      - assets/locations.json
+     - data/users.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
